Fix the alignment and increase font size of calc display

--- a/styles.css
+++ b/styles.css
@@ -9,8 +9,9 @@ body {
   margin-top: 100px;
 }
 .calcu-body {
+  position: relative;
   width: 400px;
-  height: 600px;
+  height: 550px;
   border: solid 1px black;
   border-radius: 10px;
 
@@ -24,10 +25,13 @@ body {
 
 .calcu-display {
   width: 350px;
-  height: 200px;
+  height: 150px;
   border: solid 1px black;
   border-radius: 10px;
   color: white;
+  font-size: 100px;
+  text-align: right;
+
   /*margin: 25px;*/
 }
 
